--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-query": "^3.9.6"
+    "axios": "0.21.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-query": "3.9.7",
+    "react-query-devtools": "2.6.3",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
